--- a/App/app/src/main/res/values/themes.xml
+++ b/App/app/src/main/res/values/themes.xml
@@ -6,4 +6,13 @@
     </style>
 
     <style name="Theme.CrowdSpark" parent="Base.Theme.CrowdSpark" />
+
+    <style name="Theme.CrowdSpark.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.CrowdSpark.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.CrowdSpark.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
