--- a/App/app/src/main/res/layout/activity_editar_usuario.xml
+++ b/App/app/src/main/res/layout/activity_editar_usuario.xml
@@ -44,21 +44,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="nombre" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="195dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="264dp"
-        android:layout_marginEnd="56dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="000000000" />
+            android:hint="nombre"
+            android:textColor="#595959" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
@@ -92,6 +79,7 @@
         android:ems="10"
         android:hint="0000000"
         android:inputType="numberDecimal"
+        android:textColor="#595959"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -115,6 +103,7 @@
         android:ems="10"
         android:hint="00000000"
         android:inputType="phone"
+        android:textColor="#595959"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -164,6 +153,7 @@
         android:ems="10"
         android:hint="password"
         android:inputType="textPassword"
+        android:textColor="#595959"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -176,6 +166,7 @@
         android:ems="10"
         android:hint="email@ejemplo.com"
         android:inputType="textEmailAddress"
+        android:textColor="#595959"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -213,7 +204,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="area" />
+            android:hint="area"
+            android:textColor="#595959" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <EditText
@@ -225,6 +217,7 @@
         android:ems="10"
         android:hint="password"
         android:inputType="textPassword"
+        android:textColor="#595959"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -261,6 +254,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextNumber2"
+        android:layout_width="196dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="263dp"
+        android:layout_marginEnd="56dp"
+        android:ems="10"
+        android:hint="000000000"
+        android:inputType="number"
+        android:textColor="#595959"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
