--- a/App/app/src/main/res/layout/activity_formulario.xml
+++ b/App/app/src/main/res/layout/activity_formulario.xml
@@ -35,8 +35,8 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="184dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="204dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="192dp"
         android:layout_marginEnd="52dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -44,21 +44,23 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="nombre" />
+            android:hint="nombre"
+            android:textColor="#595959" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="195dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="264dp"
-        android:layout_marginEnd="56dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="252dp"
+        android:layout_marginEnd="52dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="descripcion" />
+            android:hint="descripcion"
+            android:textColor="#595959" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
@@ -92,6 +94,7 @@
         android:ems="10"
         android:hint="0000000"
         android:inputType="numberDecimal"
+        android:textColor="#595959"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -156,7 +159,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="195dp"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="364dp"
         android:layout_marginEnd="56dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -165,7 +168,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="categoria" />
+            android:hint="categoria"
+            android:textColor="#595959" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <ImageButton
@@ -184,8 +188,9 @@
         android:id="@+id/datePicker"
         android:layout_width="200dp"
         android:layout_height="87dp"
-        android:layout_marginTop="412dp"
+        android:layout_marginTop="424dp"
         android:layout_marginEnd="56dp"
+        android:calendarTextColor="#595959"
         android:calendarViewShown="false"
         android:datePickerMode="spinner"
         android:spinnersShown="true"
