--- a/App/app/src/main/res/layout/activity_proyect_card.xml
+++ b/App/app/src/main/res/layout/activity_proyect_card.xml
@@ -28,12 +28,12 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/image"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:contentDescription="imagen del proyecto"
-                    android:scaleType="fitCenter" />
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:contentDescription="imagen del proyecto"
+                android:scaleType="fitCenter" />
 
             <TextView
                 android:id="@+id/nombre"
@@ -94,6 +94,13 @@
                     android:text="(objetivo)"
                     android:textColor="#6D6D6D"/>
 
+            <Button
+                android:id="@+id/detalle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#06AAC7"
+                android:text="Ver Proyecto"
+                android:textColor="#FFFFFF" />
 
 
         </LinearLayout>
