--- a/App/app/src/main/res/layout/activity_editar_proyecto.xml
+++ b/App/app/src/main/res/layout/activity_editar_proyecto.xml
@@ -9,6 +9,19 @@
     tools:context=".ventanas.EditarProyecto">
 
     <ImageView
+        android:id="@+id/imagenProyecto2"
+        android:layout_width="183dp"
+        android:layout_height="107dp"
+
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.541"
+        app:layout_constraintStart_toEndOf="@+id/textView8"
+        app:layout_constraintTop_toBottomOf="@+id/dateButton"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@android:drawable/ic_menu_upload_you_tube" />
+
+    <ImageView
         android:id="@+id/imageView"
         android:layout_width="120dp"
         android:layout_height="128dp"
@@ -113,7 +126,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="648dp"
+        android:layout_marginTop="664dp"
         android:backgroundTint="#06AAC7"
         android:text="Editar"
         android:textColor="#FFFFFF"
@@ -204,22 +217,6 @@
         android:textColor="#595959"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="195dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="568dp"
-        android:layout_marginEnd="44dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="url"
-            android:textColor="#595959" />
-    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/dateButton"
