--- a/App/app/src/main/res/layout/activity_editar_usuario.xml
+++ b/App/app/src/main/res/layout/activity_editar_usuario.xml
@@ -34,8 +34,9 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="195dp"
-        android:layout_height="48dp"
+        android:id="@+id/nombreCompleto2"
+        android:layout_width="194dp"
+        android:layout_height="64dp"
         android:layout_marginTop="211dp"
         android:layout_marginEnd="58dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,43 +71,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/editTextNumberDecimal"
-        android:layout_width="159dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="412dp"
-        android:layout_marginEnd="56dp"
-        android:ems="10"
-        android:hint="0000000"
-        android:inputType="numberDecimal"
-        android:textColor="#595959"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="580dp"
-        android:text="Confirmación Contraseña:"
-        android:textColor="#595959"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/editTextPhone"
-        android:layout_width="195dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="464dp"
-        android:layout_marginEnd="56dp"
-        android:ems="10"
-        android:hint="00000000"
-        android:inputType="phone"
-        android:textColor="#595959"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
@@ -133,30 +97,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="424dp"
-        android:text="Cantidad Inicial de Dinero:"
-        android:textColor="#595959"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/editTextTextPassword2"
-        android:layout_width="148dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="568dp"
-        android:layout_marginEnd="56dp"
-        android:ems="10"
-        android:hint="password"
-        android:inputType="textPassword"
-        android:textColor="#595959"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <EditText
         android:id="@+id/editTextTextEmailAddress"
         android:layout_width="195dp"
@@ -172,17 +112,6 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="476dp"
-        android:text="Telefono:"
-        android:textColor="#595959"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -194,8 +123,9 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="195dp"
-        android:layout_height="48dp"
+        android:id="@+id/area2"
+        android:layout_width="200dp"
+        android:layout_height="55dp"
         android:layout_marginTop="364dp"
         android:layout_marginEnd="56dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -212,7 +142,7 @@
         android:id="@+id/editTextTextPassword"
         android:layout_width="195dp"
         android:layout_height="48dp"
-        android:layout_marginTop="508dp"
+        android:layout_marginTop="520dp"
         android:layout_marginEnd="56dp"
         android:ems="10"
         android:hint="password"
@@ -222,11 +152,83 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="436dp"
+        android:text="Cantidad Inicial de Dinero:"
+        android:textColor="#595959"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextNumberDecimal"
+        android:layout_width="159dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="424dp"
+        android:layout_marginEnd="52dp"
+        android:ems="10"
+        android:hint="0000000"
+        android:inputType="numberDecimal"
+        android:textColor="#595959"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextPhone"
+        android:layout_width="195dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="476dp"
+        android:layout_marginEnd="56dp"
+        android:ems="10"
+        android:hint="00000000"
+        android:inputType="phone"
+        android:textColor="#595959"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="488dp"
+        android:text="Telefono:"
+        android:textColor="#595959"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextTextPassword2"
+        android:layout_width="148dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="580dp"
+        android:layout_marginEnd="56dp"
+        android:ems="10"
+        android:hint="password"
+        android:inputType="textPassword"
+        android:textColor="#595959"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="592dp"
+        android:text="Confirmación Contraseña:"
+        android:textColor="#595959"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
-        android:layout_marginTop="528dp"
+        android:layout_marginTop="540dp"
         android:text="Contraseña:"
         android:textColor="#595959"
         app:layout_constraintStart_toStartOf="parent"
