--- a/App/app/src/main/res/layout/activity_formulario.xml
+++ b/App/app/src/main/res/layout/activity_formulario.xml
@@ -184,22 +184,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="195dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="511dp"
-        android:layout_marginEnd="52dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="url"
-            android:textColor="#595959" />
-    </com.google.android.material.textfield.TextInputLayout>
-
     <Button
         android:id="@+id/dateButton"
         android:layout_width="wrap_content"
@@ -211,5 +195,16 @@
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imagenProyecto"
+        android:layout_width="183dp"
+        android:layout_height="107dp"
+
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView8"
+        app:layout_constraintTop_toBottomOf="@+id/dateButton"
+        app:srcCompat="@android:drawable/ic_menu_upload_you_tube" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
