--- a/App/app/src/main/res/layout/activity_registrarse.xml
+++ b/App/app/src/main/res/layout/activity_registrarse.xml
@@ -35,6 +35,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/nombreCompleto"
         android:layout_width="195dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="204dp"
@@ -195,6 +196,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/areaTrabajo"
         android:layout_width="195dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="360dp"
