--- a/App/app/src/main/res/layout/activity_formulario.xml
+++ b/App/app/src/main/res/layout/activity_formulario.xml
@@ -34,6 +34,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/nombreProyecto"
         android:layout_width="184dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="192dp"
@@ -49,6 +50,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/descripcionProyecto"
         android:layout_width="195dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="252dp"
@@ -158,6 +160,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/categoriaProyecto"
         android:layout_width="195dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="364dp"
