--- a/App/app/src/main/res/layout/activity_principal.xml
+++ b/App/app/src/main/res/layout/activity_principal.xml
@@ -84,9 +84,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginEnd="1dp"
+        android:gravity="center"
         android:orientation="vertical"
         android:paddingStart="156dp"
-        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -101,11 +101,29 @@
             android:textColor="#015788"
             android:textSize="20sp" />
 
+        <TextView
+            android:id="@+id/textView15"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="Filtrar:"
+            android:textColor="#595959"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:foregroundTint="#595959" />
+
         <ListView
             android:id="@+id/listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="78dp"/>
+            android:layout_marginTop="40dp" />
 
 
     </LinearLayout>
