--- a/App/app/src/main/res/layout/activity_donaciones.xml
+++ b/App/app/src/main/res/layout/activity_donaciones.xml
@@ -35,11 +35,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="160dp"
+        android:id="@+id/lista"
+        android:layout_width="361dp"
+        android:layout_height="525dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        android:background="@drawable/back"
+        />
+
 
     <ImageView
         android:id="@+id/imageView5"
