--- a/App/app/src/main/res/layout/elemento.xml
+++ b/App/app/src/main/res/layout/elemento.xml
@@ -5,16 +5,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:padding="16dp"
+
     tools:context=".componentes.DonacionesAdapter">
     <TextView
         android:id="@+id/textViewNombreProyecto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#21A8A6"
         android:text="Nombre Proyecto: " />
 
     <TextView
         android:id="@+id/textViewMonto"
         android:layout_width="58dp"
+        android:textColor="#21A8A6"
         android:layout_height="wrap_content"
         android:text="Monto" />
 
@@ -22,16 +25,19 @@
         android:id="@+id/textViewNombreDonante"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#21A8A6"
         android:text="Nombre Donante: " />
 
     <TextView
         android:id="@+id/textViewCorreo"
+        android:textColor="#21A8A6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Correo: " />
 
     <TextView
         android:id="@+id/textViewTelefono"
+        android:textColor="#21A8A6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Teléfono: " />
