--- a/App/app/src/main/res/layout/activity_donaciones.xml
+++ b/App/app/src/main/res/layout/activity_donaciones.xml
@@ -38,11 +38,11 @@
         android:id="@+id/lista"
         android:layout_width="361dp"
         android:layout_height="525dp"
+        android:background="@drawable/back"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        android:background="@drawable/back"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 
     <ImageView
