--- a/App/app/src/main/res/layout/activity_estadisticas.xml
+++ b/App/app/src/main/res/layout/activity_estadisticas.xml
@@ -132,7 +132,7 @@
         app:layout_constraintTop_toTopOf="@+id/materialToolbar" />
 
     <TextView
-        android:id="@+id/donaciones"
+        android:id="@+id/lista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
