--- a/App/app/src/main/res/layout/activity_principal_admin.xml
+++ b/App/app/src/main/res/layout/activity_principal_admin.xml
@@ -54,7 +54,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/donaciones"
+        android:id="@+id/lista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
