--- a/App/app/src/main/res/layout/activity_usuarios.xml
+++ b/App/app/src/main/res/layout/activity_usuarios.xml
@@ -35,11 +35,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="200dp"
+        android:id="@+id/lista"
+        android:background="@drawable/back"
+        android:layout_width="384dp"
+        android:layout_height="491dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/correo" />
 
     <ImageView
         android:id="@+id/imageView5"
