--- a/App/app/src/main/res/layout/activity_editar_usuario.xml
+++ b/App/app/src/main/res/layout/activity_editar_usuario.xml
@@ -261,7 +261,7 @@
     <EditText
         android:id="@+id/editTextNumber2"
         android:layout_width="196dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="263dp"
         android:layout_marginEnd="56dp"
         android:ems="10"
