--- a/App/app/src/main/res/layout/activity_principal.xml
+++ b/App/app/src/main/res/layout/activity_principal.xml
@@ -117,7 +117,7 @@
             android:layout_height="48dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:foregroundTint="#595959" />
+            android:foregroundTint="#21A8A6" />
 
         <ListView
             android:id="@+id/listview"
