--- a/App/app/src/main/res/values/colors.xml
+++ b/App/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#21A8A6</color>
+    <color name="green">#31EB7E</color>
+
 </resources>
