--- a/App/app/src/main/res/values/themes.xml
+++ b/App/app/src/main/res/values/themes.xml
@@ -1,15 +1,20 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.CrowdSpark" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimaryDark">@color/black</item>
+        <item name="colorAccent">@color/blue</item>
     </style>
+
 
     <style name="Theme.CrowdSpark" parent="Base.Theme.CrowdSpark" />
 
     <style name="Theme.CrowdSpark.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimaryDark">@color/black</item>
+        <item name="colorAccent">@color/blue</item>
     </style>
 
     <style name="Theme.CrowdSpark.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
